# longevai-newsletter

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/versions/: 0001_initial.py  0002_source_runs.py
app/: main.py
app/api/: routes.py
app/core/: auth.py  config.py  observability.py  responses.py
app/db/: init_db.py  session.py
app/models/: __init__.py  entities.py
app/schemas/: __init__.py  common.py
app/services/: audit.py  idempotency.py  pipeline.py
app/services/ingestion/: common.py  html.py  manual.py  pubmed.py  rss.py
app/services/llm/: client.py  prompts.py  router.py
app/services/llm/prompt_templates/: analysis_v1.txt  triage_v1.txt  (+1 more)
app/services/publish/: beehiiv.py  bundle.py
app/state_machine/: document_status.py
app/tasks/: celery_app.py  jobs.py
app/utils/: hashing.py  network.py
docs/: 00_INDEX.MD  01_SETUP_AND_BOOTSTRAP.MD  02_CONFIGURATION.MD  03_ARCHITECTURE.MD  04_DATA_MODEL_AND_MIGRATIONS.MD  05_API_REFERENCE.MD  06_INGESTION_PIPELINE.MD  07_LLM_PIPELINE.MD  08_EDITORIAL_AND_PUBLISHING.MD  09_OBSERVABILITY_AND_OPERATIONS.MD  10_TESTING_AND_QUALITY.MD  11_RELEASE_RUNBOOK.MD  12_TROUBLESHOOTING.MD  13_SOURCE_CATALOG_AND_ONBOARDING.MD
scripts/: dev_up.sh  seed_sources.py  source_catalog.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_llm_router.py  test_network_security.py  test_pubmed_ingestion.py  test_schemas.py  test_source_catalog.py  test_state_machine.py
ui/: app.py
