[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "longevai-newsletter"
version = "0.1.0"
description = "LongevAI newsletter pipeline"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.32",
  "psycopg[binary]>=3.2.0",
  "alembic>=1.13.2",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "celery>=5.4.0",
  "redis>=5.0.8",
  "httpx>=0.27.0",
  "openai>=1.60.0",
  "anthropic>=0.42.0",
  "feedparser>=6.0.11",
  "beautifulsoup4>=4.12.3",
  "trafilatura>=1.11.0",
  "playwright>=1.46.0",
  "tenacity>=9.0.0",
  "opentelemetry-api>=1.26.0",
  "opentelemetry-sdk>=1.26.0",
  "opentelemetry-instrumentation-fastapi>=0.47b0",
  "opentelemetry-instrumentation-sqlalchemy>=0.47b0",
  "prometheus-client>=0.20.0",
  "jinja2>=3.1.4",
  "streamlit>=1.37.0",
  "requests>=2.32.3",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8",
  "pytest-cov>=5.0.0",
  "respx>=0.21.1",
  "ruff>=0.6.1",
  "mypy>=1.11.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.setuptools.packages.find]
include = ["app*", "ui*"]
